# platform.upstream.pam

./: Copyright  Linux-PAM-1.1.6.tar.bz2.delta  Linux-PAM-1.1.6.tar.bz2.id  Linux-PAM-1.2.1.tar.gz.delta  Linux-PAM-1.2.1.tar.gz.id  configure.ac  configure.in  pam-1.1.5.tar.bz2.delta  pam-1.1.5.tar.bz2.id  project.config
libpam/include/security/: _pam_types.h  pam_appl.h  pam_ext.h  pam_modules.h  pam_modutil.h
libpam_misc/include/security/: pam_misc.h
libpamc/include/security/: pam_client.h
modules/: Makefile.am
modules/pam_exec/: pam_exec.8.xml  pam_exec.c
modules/pam_namespace/: Makefile.in
modules/pam_smack/: Makefile.am  pam_smack.c
modules/pam_timestamp/: Makefile.am
modules/pam_unix/: pam_unix.8.xml  pam_unix_acct.c  pam_unix_passwd.c  passverify.c  support.c
modules/pam_userdb/: pam_userdb.c
packaging/: pam-fix-includes.patch  pam.changes  pam.spec  system-auth
po/: Linux-PAM.pot  ar.po  as.po  bn_IN.po  ca.po  cs.po  da.po  de.po  es.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  it.po  ja.po  kk.po  km.po  kn.po  ko.po  ml.po  mr.po  ms.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sk.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  tr.po  (+5 more)
